--- a/src/components/map.pug
+++ b/src/components/map.pug
@@ -1,3 +1,3 @@
 mixin map(className)
     div.w-100.map(class= className)
-        iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3A8a2e6444608312d24ba3b7e1a971338e28fc2d7cb7c5b6b9831f16a0dfeaf61e&amp;source=constructor" width="100%" height="100%" frameborder="0")
+        iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3A8a2e6444608312d24ba3b7e1a971338e28fc2d7cb7c5b6b9831f16a0dfeaf61e&amp;source=constructor&scroll=false" width="100%" height="100%" frameborder="0")
