--- a/src/layouts/modules/main/footer.pug
+++ b/src/layouts/modules/main/footer.pug
@@ -83,7 +83,7 @@ footer
                         a(href="#") Политика конфиденциальности
                     .footer__restItem
                         a(href="map.html") Карта сайта
-                .footer__restBlock.footer__restBlock--developer
+                a(href="#" target="blank").footer__restBlock.footer__restBlock--developer
                     | Сайт разработан в
-                    a(href="#" target="blank").footer__developerLogo
+                    .footer__developerLogo
                         img(src="@img/logo-developer.png" alt='developer logo')
