--- a/src/layouts/modules/parts/spoilers.pug
+++ b/src/layouts/modules/parts/spoilers.pug
@@ -7,4 +7,4 @@ section
     .container
         +h2WithIcon('@img/question.svg', 'Частые вопросы')
         +questions()
-        +whiteButton('Смотреть все вопросы', 'w-100 mt-step')
+        +whiteButton('Смотреть все вопросы', 'w-100 mt-step', 'questions.html')
