--- a/src/schools.pug
+++ b/src/schools.pug
@@ -22,6 +22,6 @@ block content
                     .table2Col.mt-step.table2Col--noBorder
                         - var index = 0;
                         while (index++ < 4)
-                            .table2Col__item(class= index === 2 ? 'grey-background' : '') МОАУ «Основная общеобразовательная школа № 73»
-                            .table2Col__item(class= index === 2 ? 'grey-background' : '') г. Оренбург, ул. Советская, 7
+                            .table2Col__item МОАУ «Основная общеобразовательная школа № 73»
+                            .table2Col__item г. Оренбург, ул. Советская, 7
                     +map('mt-step')
