--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -53,8 +53,9 @@
 @import "modules/parts/video"
 @import "modules/parts/contactInfo"
 @import "modules/parts/socials"
-@import "modules/parts/quote"
+//@import "modules/parts/quote"
 @import "modules/parts/popup"
+@import "modules/parts/popupMessage"
 
 // grids
 @import "modules/grid/gridX2"
