--- a/src/styles/modules/UI/buttons.sass
+++ b/src/styles/modules/UI/buttons.sass
@@ -9,6 +9,8 @@
   border-radius: em(4, 16)
   transition: $defaultTransitionDuration all
   font-weight: 800
+  display: inline-block
+  text-align: center
 
   &.arrow-bottom
     .icon
