--- a/src/styles/modules/parts/features.sass
+++ b/src/styles/modules/parts/features.sass
@@ -84,7 +84,7 @@ html.theme-visually-impaired
     letter-spacing: em(-0.4, 24)
     font-weight: 700
     padding: em(8, 24) em(10, 24)
-    box-sizing: content-box
+    box-sizing: content-box !important
 
     @media screen and (max-width: $featuresFirstResponse)
       font-size: em(12.3615, 16)
