--- a/src/styles/modules/parts/popup.sass
+++ b/src/styles/modules/parts/popup.sass
@@ -42,6 +42,9 @@
     top: 50%
     transform: translateY(-50%)
 
+    @media screen and (max-width: 500px)
+      display: none
+
     &.disabled
       opacity: 0
       pointer-events: none
