--- a/src/textPage.pug
+++ b/src/textPage.pug
@@ -11,35 +11,35 @@ block breadcrumbs
 block content
     section
         .container
-            - var index = 0;
-            while (index++ < 3)
-                p(class= index === 1 ? '' : 'mt-step') Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания. Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение. Если воспользоваться простейшим примером, то кто из нас стал бы заниматься какими бы то ни было тягостными физическими упражнениями, если бы это не приносило с собой некоей пользы? И кто мог бы по справедливости упрекнуть стремящегося к наслаждению, которое не несло бы с собой никаких неприятностей, или того, кто избегал бы такого страдания, которое не приносило бы с собой никакого наслаждения?
-            h1.mt-step Заголовок h1
-            h2.mt-step Заголовок h2
-            h3.mt-step Заголовок h3
-            h4.mt-step Заголовок h4
-            ul.list.mt-step
+            .text-editor.flex.d-gap.flex-column
                 - var index = 0;
-                while (index++ < 5)
-                    li Пункт обычного списка
-            ol.list.mt-step
-                - var index = 0;
-                while (index++ < 5)
-                    li Пункт номерного списка
-            .table-wrapper.mt-step
-                table.table.w-100
-                    tr
-                        th Ячейка
-                        th Ячейка
-                        th Ячейка
-                        th Ячейка
+                while (index++ < 3)
+                    p Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания. Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение. Если воспользоваться простейшим примером, то кто из нас стал бы заниматься какими бы то ни было тягостными физическими упражнениями, если бы это не приносило с собой некоей пользы? И кто мог бы по справедливости упрекнуть стремящегося к наслаждению, которое не несло бы с собой никаких неприятностей, или того, кто избегал бы такого страдания, которое не приносило бы с собой никакого наслаждения?
+                h1 Заголовок h1
+                h2 Заголовок h2
+                h3 Заголовок h3
+                h4 Заголовок h4
+                ul
                     - var index = 0;
-                    while (index++ < 3)
+                    while (index++ < 5)
+                        li Пункт обычного списка
+                ol
+                    - var index = 0;
+                    while (index++ < 5)
+                        li Пункт номерного списка
+                .table-wrapper
+                    table
                         tr
-                            - var sub_index = 0;
-                            while (sub_index++ < 4)
-                                td Ячейка
-            .quote.mt-step.grey-background.flex.pad-half-step.border-radius.d-gap
-                .quote__img
+                            th Ячейка
+                            th Ячейка
+                            th Ячейка
+                            th Ячейка
+                        - var index = 0;
+                        while (index++ < 3)
+                            tr
+                                - var sub_index = 0;
+                                while (sub_index++ < 4)
+                                    td Ячейка
+                blockquote
                     img(src="@img/quote.svg", alt='quote')
-                p.quote__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того.
+                    p Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того.
