--- a/src/components/questions.pug
+++ b/src/components/questions.pug
@@ -3,11 +3,11 @@ mixin questions()
         - var index = 0;
         while (index < 5)
             - index++
-            .spoiler(data-spoiler='true').mb-halfStep
+            .spoiler(data-spoiler='true', data-disable-outclick="true", data-family-spoilers='questions').mb-halfStep
                 .spoiler__area
                     span Текст вопроса
                     svg.arrow-icon
                         use(href="@img/icons/icons.svg#arrow-select")
                 .spoiler__content(data-spoiler-wrapper="true")
                     div.spoiler__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания.
-        +usualButton('Задать свой вопрос', 'w-100')
+        +usualButton('Задать свой вопрос', 'w-100', 'feedback.html')
