--- a/src/documents.pug
+++ b/src/documents.pug
@@ -8,19 +8,19 @@ include components/breadcrumbs
 include components/asides/asideForInformation
 
 block variables
-    - var pageTitle = 'Сведения об образовательной организации'
+    - var pageTitle = 'Документы'
 
 block breadcrumbs
-    +breadcrumbs([{text: 'Сведения об образовательной организации'}], 'Сведения об образовательной организации')
+    +breadcrumbs([{text: 'Документы'}], 'Документы')
 
 
 block content
     section
         .container
             .pageLayout
-                +asideForInformation(0)
+                +asideForInformation(2)
                 article
-                    h2.smallFont Основные сведения
+                    h2.smallFont Документы
                     each item in [1, 2, 3, 4]
                         div.mt-step
                             p Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания. Равно как нет никого, кто возлюбил бы, предпочел и возжаждал бы само страдание только за то, что это страдание, а не потому, что иной раз возникают такие обстоятельства, когда страдания и боль приносят некое и немалое наслаждение. Если воспользоваться простейшим примером, то кто из нас стал бы заниматься какими бы то ни было тягостными физическими упражнениями, если бы это не приносило с собой некоей пользы? И кто мог бы по справедливости упрекнуть стремящегося к наслаждению, которое не несло бы с собой никаких неприятностей, или того, кто избегал бы такого страдания, которое не приносило бы с собой никакого наслаждения?
