--- a/src/layouts/template.pug
+++ b/src/layouts/template.pug
@@ -1,15 +1,16 @@
 block variables
 
 <!DOCTYPE html>
-html(lang='en')
+html(lang='ru')
     head
         meta(charset='UTF-8')
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
-        meta(name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title= pageTitle
         link(rel='icon' href='favicon.svg')
         link(rel='stylesheet' href='styles/bvi.css')
         link(rel='stylesheet' href='styles/main.css')
+        link(rel='stylesheet' href='styles/text-editor.css')
     body
         include modules/main/header
         main
