--- a/src/styles/modules/parts/achievements.sass
+++ b/src/styles/modules/parts/achievements.sass
@@ -8,6 +8,23 @@ $secondAchievementsResponse: 600px
   height: em(183, 16)
   font-size: 1rem
   width: fit-content
+  position: relative
+
+  &:before
+    content: ''
+    pointer-events: none
+    opacity: 0
+    transition: $defaultTransitionDuration opacity
+    width: 100%
+    @include useAbsolutePosition()
+    height: 100%
+    background: url('../img/zoomIn.svg') 50% 50% / em(50, 16) em(50, 16) no-repeat, rgba(0, 0, 0, 0.5)
+
+  &:hover
+
+    &:before
+      opacity: 1
+
 
   &:not(:last-child)
     margin-right: em(24, 16)
