--- a/src/styles/modules/parts/galleryItem.sass
+++ b/src/styles/modules/parts/galleryItem.sass
@@ -22,6 +22,10 @@ html.theme-visually-impaired
   border: 1px solid var(--galleryBorderColor)
   border-radius: em(10, 16)
   padding: em(15, 16)
+  transition: $defaultTransitionDuration all
+
+  &:hover
+    background: var(--greyBackground)
 
   @media screen and (max-width: $galleryFirstTextResponse)
     font-size: 1.65vw
